# nthm

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/: cmake_uninstall.cmake.in  configure_manpages.cmake.in
docutils/: 00_wrap.in  10_tags.in  20_quotes.in  30_para.in  40_bullets.in  50_lists.in  60_titles.in  README.md
include/nthm/: nthm.h
man/man3/: nthm_blocked.3.in  nthm_busy.3.in  nthm_enter_scope.3.in  nthm_exit_scope.3.in  nthm_kill.3.in  nthm_kill_all.3.in  nthm_killed.3.in  nthm_open.3.in  nthm_read.3.in  nthm_select.3.in  nthm_send.3.in  nthm_strerror.3.in  nthm_sync.3.in  nthm_tether.3.in  nthm_truncate.3.in  nthm_truncate_all.3.in  nthm_truncated.3.in  nthm_untether.3.in
man/man7/: nthm.7.in
src/: api.c  context.c  context.h  errs.c  errs.h  nthm.c  nthmconfig.h.in  pipes.c  pipes.h  pipl.c  pipl.h  plumbing.c  plumbing.h  pool.c  pool.h  protocol.c  protocol.h  scopes.c  scopes.h  sync.c  sync.h
test/: bizzyb.c  deeppool.c  flatpool.c  freepool.c  killjoy.c  pipein.c  pipeout.c  rubbish.c  scopestrial.c  sendany.c  synchrotron.c  testconfig.h.in
